# OpenCV-Interpolation-Implementation

./: CMakeLists.txt  bicubic.h  bilinear.h  imageComparison.h  main.cpp  nearestNeighbor.h
